--- a/src/styles.css
+++ b/src/styles.css
@@ -289,3 +289,18 @@ body {
 .mw-40px {
   width: 40px;
 }
+
+.mat-calendar-body-selected {
+  background-color: #045b62;
+  color: #fff;
+}
+
+.backdrop-reservation {
+  background-color: transparent;
+}
+
+.panel-reservation {
+  max-width: 100vw;
+  height: 80vh;
+  min-width: 600px;
+}
