--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,6 +1,7 @@
 .container-fluid {
   height: 100vh;
-  display: grid;
+  background: #fcfcfd;
+  /* display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 0px 0px;
@@ -8,15 +9,22 @@
   grid-template-areas:
     "user shift shift"
     "user page page"
-    "input page page";
+    "input page page"; */
 }
 
 .shift {
   grid-area: shift;
 }
 
+user-apps {
+  width: 100%;
+}
+
 .user {
   grid-area: user;
+  height: fit-content;
+  width: 100%;
+  padding: 10px;
 }
 
 .page {
@@ -41,23 +49,31 @@
   cursor: pointer;
 }
 
-.card-shift,
+/* .card-shift,
 .card-choose {
   width: 100% !important;
   height: inherit !important;
   display: flex;
   flex-direction: row;
   margin: auto;
-  width: 18.75rem /* 300px */;
-  padding: 1rem /* 16px */;
+  width: 18.75rem ;
+  padding: 1rem;
   margin: 1rem;
-  border-radius: 1.25rem /* 20px */;
+  border-radius: 1.25rem ;
   box-shadow: 0 10px 15px rgb(0, 0, 0, 0.05);
   background: white;
   border: none;
   cursor: pointer;
-}
+} */
 
 .font-weight-bold {
   font-weight: bold;
+}
+
+.h-fit-content {
+  height: fit-content;
+}
+
+.flex-warp {
+  flex-wrap: wrap;
 }
