--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,25 +1,40 @@
 <div class="container-fluid">
+    <div class="d-flex h-inherit">
+        <div class="col-5">
+            <div class="user d-flex justify-content-center">
+                <user-apps (logoutEmit)="logout()" [user]="user"></user-apps>
+            </div>
+        </div>
+        <div class="col container-fluid">
+            <div class="user d-flex justify-content-center">
+                <shift-card-app class="w-100 h-fit-content" [shift]="shift"></shift-card-app>
+            </div>
+            <div class="user d-flex justify-content-center">
+                <button-card class="w-100 h-auto"></button-card>
+            </div>
+        </div>
+    </div>
     <!-- Panel Shift -->
-    <div class="shift d-flex justify-content-center" style="height: 30vh;">
+    <!-- <div class="shift d-flex justify-content-center" style="height: 30vh;">
         <div class="card-shift">
             <shift-card-app class="w-100" [shift]="shift"></shift-card-app>
         </div>
-    </div>
+    </div> -->
     <!-- Panel User -->
-    <div class="user d-flex justify-content-center" style="height: 80vh;">
+    <!-- <div class="user d-flex justify-content-center" style="height: 80vh;">
         <user-apps [user]="user"></user-apps>
-    </div>
+    </div> -->
     <!-- Panel Button Route -->
-    <div class="page d-flex justify-content-center" style="height: auto;">
+    <!-- <div class="page d-flex justify-content-center" style="height: auto;">
         <div class="card-choose">
             <button-card class="w-100"></button-card>
         </div>
-    </div>
+    </div> -->
     <!-- Card Logout -->
-    <div class="input d-flex justify-content-center" style="height: auto;">
+    <!-- <div class="input d-flex justify-content-center" style="height: auto;">
         <div mat-button class="card-button d-flex align-items-center font-weight-bold" (click)="logout()">
             <mat-icon>logout</mat-icon>
             <p class="w-100 mx-2 my-0 text-center">KELUAR</p>
         </div>
-    </div>
+    </div> -->
 </div>
