--- a/src/app/main/pages/order/order.component.css
+++ b/src/app/main/pages/order/order.component.css
@@ -89,18 +89,6 @@ input:focus-visible {
   outline: none;
 }
 
-.mat-select {
-  height: 70%;
-  align-items: center;
-  padding: 10px !important;
-  width: 100%;
-  padding: 0px;
-  background-color: white;
-  box-shadow: 0px 4px 20px rgb(0 0 0 / 5%);
-  border-radius: 4px;
-  margin: 8px 0px 0px 0px;
-}
-
 .img-cart {
   width: 100%;
 }
@@ -173,15 +161,18 @@ owl-carousel-o {
 
 .owl-category-price {
   background: white;
-  padding: 15px 10px;
-  width: fit-content;
+  padding: 10px 10px;
+  width: max-content;
   /* min-height: 50px; */
-  border-radius: 10px;
+  border: 1px solid #e5e5e5;
+  border-radius: 8px;
 }
 
 .bg-active {
-  background-color: #045b62;
-  color: white;
+  background: var(--primary-100);
+  border: 1px solid var(--primary-200);
+  border-radius: 8px;
+  color: var(--primary-200);
 }
 
 /* .owl-carousel .owl-stage {
