--- a/src/app/main/pages/order/order.component.html
+++ b/src/app/main/pages/order/order.component.html
@@ -1,53 +1,54 @@
 <mat-drawer-container class="mat-drawer-order">
     <mat-drawer mode="side" opened>
         <!-- SIDEBAR -->
+        <img class="logo-small" src="assets/images/sm_logo.png" alt="logo-small">
+        <h4 class="fw-bold text-center my-3 text-main">MENU</h4>
 
-        <!-- {{ order.getPriceCat() | async | json }} -->
-
-        <div (click)="back()" class="d-flex align-items-center px-3 py-2 mt-2 cursor-pointer">
-            <mat-icon svgIcon="back"></mat-icon>
-            <p class="mb-0 px-2"><strong>Kembali</strong></p>
-        </div>
-
-        <hr class="my-1 mx-3">
 
         <a routerLink="/order" [queryParams]="{nav: 'shortcut'}" queryParamsHandling="merge">
-            <div class="d-flex px-3 py-2 w-100">
-                <button [ngClass]="{'active': activeRoute === 'shortcut'}" mat-button
-                    class="w-100 btn-indicator-left active">
-                    <mat-icon>bookmark</mat-icon>
-                    <p class="mb-0">Utama</p>
-                </button>
+            <div [ngClass]="{'active-route': activeRoute === 'shortcut'}" class="menu-box cursor-pointer mb-10">
+                <mat-icon *ngIf="activeRoute !== 'shortcut'" [class.active-route-svg]="activeRoute === 'shortcut'"
+                    svgIcon="main"></mat-icon>
+                <mat-icon *ngIf="activeRoute === 'shortcut'" [class.active-route-svg]="activeRoute === 'shortcut'"
+                    svgIcon="main-active"></mat-icon>
+                <p class="mb-0">Utama</p>
             </div>
         </a>
 
         <a routerLink="/order" [queryParams]="{nav: 'product'}" queryParamsHandling="merge">
-            <div class="d-flex px-3 py-2 w-100">
-                <button [ngClass]="{'active': activeRoute === 'product'}" mat-button class="w-100 btn-indicator-left">
-                    <mat-icon>book</mat-icon>
-                    <p class="mb-0">Satuan</p>
-                </button>
+            <div [ngClass]="{'active-route': activeRoute === 'product'}" class="menu-box cursor-pointer mb-10">
+                <mat-icon *ngIf="activeRoute !== 'product'" [class.active-route-svg]="activeRoute === 'product'"
+                    svgIcon="product"></mat-icon>
+                <mat-icon *ngIf="activeRoute === 'product'" [class.active-route-svg]="activeRoute === 'product'"
+                    svgIcon="product-active"></mat-icon>
+                <p class="mb-0">Satuan</p>
             </div>
         </a>
 
         <a routerLink="/order" [queryParams]="{nav: 'package'}" queryParamsHandling="merge">
-            <div class="d-flex px-3 py-2 w-100">
-                <button [ngClass]="{'active': activeRoute === 'package'}" mat-button class="w-100 btn-indicator-left">
-                    <mat-icon>collections_bookmark</mat-icon>
-                    <p class="mb-0">Paket</p>
-                </button>
+            <div [ngClass]="{'active-route': activeRoute === 'package'}" class="menu-box cursor-pointer mb-10">
+                <mat-icon *ngIf="activeRoute !== 'package'" [class.active-route-svg]="activeRoute === 'package'"
+                    svgIcon="package"></mat-icon>
+                <mat-icon *ngIf="activeRoute === 'package'" [class.active-route-svg]="activeRoute === 'package'"
+                    svgIcon="package-active"></mat-icon>
+                <p class="mb-0">Paket</p>
             </div>
         </a>
 
-        <a class="bottom-fixed" style="width: 10%" routerLink="/cashier" [queryParams]="{nav: 'list'}"
-            queryParamsHandling="merge">
-            <div class="d-flex px-3 py-2 w-100">
-                <button mat-button class="w-100 btn-indicator-left btn-flip">
-                    <mat-icon>point_of_sale</mat-icon>
-                    <p class="mb-0">Kasir</p>
-                </button>
+        <a routerLink="/cashier" [queryParams]="{nav: 'list'}" queryParamsHandling="merge">
+            <div [ngClass]="{'active-route': activeRoute === 'list'}" class="menu-box cursor-pointer mb-10">
+                <mat-icon *ngIf="activeRoute !== 'list'" [class.active-route-svg]="activeRoute === 'list'"
+                    svgIcon="cashier"></mat-icon>
+                <mat-icon *ngIf="activeRoute === 'list'" [class.active-route-svg]="activeRoute === 'list'"
+                    svgIcon="cashier-active"></mat-icon>
+                <p class="mb-0">Kasir</p>
             </div>
         </a>
+
+        <div (click)="back()" class="menu-box cursor-pointer mb-10 sticky-bottom left-17 w-100">
+            <mat-icon svgIcon="back-screen"></mat-icon>
+            <p class="mb-0">Kembali</p>
+        </div>
 
         <!-- SIDEBAR -->
     </mat-drawer>
@@ -55,32 +56,48 @@
         <!-- CONTENT -->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-8">
+                <div class="col-8 px-0">
 
-                    <div class="row">
-                        <div class="col-3">
-                            <mat-select [(value)]="selected">
-                                <mat-option value="tipe_harga">Tipe Harga</mat-option>
-                                <mat-option [value]="item.name" *ngFor="let item of order.getPriceCat() | async">{{
-                                    item.name }}</mat-option>
-                            </mat-select>
-                        </div>
-                        <div class="col py-2">
-                            <div class="d-flex align-items-center search-input">
-                                <mat-icon class="col-2 mx-3" svgIcon="search"></mat-icon>
-                                <input (keyup)="applyFilter($event)" placeholder="Search" class="col" type="text"
-                                    mat-input>
+                    <mat-card class="">
+                        <h1 class="title-card mb-1">Menu Satuan</h1>
+                        <p class="subtitle-card mb-0">Berikut merupakan daftar menu satuan</p>
+                        <mat-card-content class="mb-0">
+
+                        </mat-card-content>
+                        <!-- <mat-divider inset></mat-divider> -->
+                        <mat-card-actions class="row d-flex justify-content-between align-items-center b-0 mb-0">
+
+                            <div class="col-3 d-flex col-4 d-flex align-items-center box-dropdown">
+                                <mat-icon class="mx-2" svgIcon="filter"></mat-icon>
+                                <mat-select [(value)]="selected" disableOptionCentering panelClass="droprown-position"
+                                    class="position-inbottom">
+                                    <mat-option value="tipe_harga">Tipe Harga</mat-option>
+                                    <mat-option [value]="item.name" *ngFor="let item of order.getPriceCat() | async">
+                                        {{ item.name }}
+                                    </mat-option>
+                                </mat-select>
                             </div>
-                        </div>
-                    </div>
+                            <div class="col py-2">
+                                <div class="d-flex align-items-center search-input">
+                                    <mat-icon class="col-2 mx-3" svgIcon="search"></mat-icon>
+                                    <input (keyup)="applyFilter($event)" placeholder="Cari Menu" class="col" type="text"
+                                        mat-input>
+                                </div>
+                            </div>
+
+                        </mat-card-actions>
+                        <mat-card-footer>
+                            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+                        </mat-card-footer>
+                    </mat-card>
 
                     <div class="row px-3 justify-content-between">
 
-                        <container-element [ngSwitch]="activeRoute">
+                        <container-element [ngSwitch]="activeRoute" class="p-0">
                             <ng-container *ngSwitchCase="'product'">
                                 <!--PRODUCT-->
                                 <ng-container *ngIf="products">
-                                    <div class="row mb-2">
+                                    <div class="row py-2 m-0 w-100 bg-white">
                                         <owl-carousel-o [options]="customOptions">
                                             <ng-container *ngFor="let pcat of order.productCategory">
                                                 <ng-template carouselSlide>
