--- a/src/app/shared/component/user-card/user-card.component.css
+++ b/src/app/shared/component/user-card/user-card.component.css
@@ -1,39 +1,47 @@
 .card-user {
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  background-color: var(--white);
-  width: 18.75rem /* 300px */;
-  padding: 1rem /* 16px */;
-  margin: 1rem;
-  border-radius: 1.25rem /* 20px */;
-  box-shadow: 0 10px 15px rgb(0, 0, 0, 0.05);
-  background: white;
-  border: none;
+  height: auto;
+  box-sizing: border-box;
+  padding: 18px;
+  background: #ffffff;
+  border: 1px solid #e5e5e5;
+  box-shadow: 0px 0px 18px rgb(166 166 166 / 16%);
+  border-radius: 12px;
 }
 
 .user-image {
   display: block;
-  width: 100%;
+  width: 40%;
   height: auto;
-  margin-bottom: 1.75rem /* 28px */;
-  border-radius: 0.625rem /* 10px */;
+  margin-bottom: 1.75rem;
+  border-radius: 50%;
 }
 
 .user-title,
 .user-description {
   text-align: center;
-  margin: 0 0.625rem /* 10px */;
+  margin: 0 0.625rem;
 }
 
 .user-title {
   color: var(--dark-blue);
-  font-size: 1.25rem /* 20px */;
+  font-size: 1.25rem;
   font-weight: 700;
 }
 
 .user-description {
   font-weight: 400;
   color: var(--grayish-blue);
-  margin-bottom: 1.25rem /* 20px */;
+  margin-bottom: 1.25rem;
+}
+
+.b-right {
+  border-right: 1px solid #e5e5e5;
+}
+
+.l-height {
+  line-height: 23px;
+}
+
+.mr-5px {
+  margin-right: 5px;
 }
