--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap");
 
 :root {
-  --red: hsl(0, 78%, 62%);
-  --cyan: hsl(180, 62%, 55%);
-  --orange: hsl(34, 97%, 64%);
-  --blue: hsl(212, 86%, 64%);
-  --varyDarkBlue: hsl(234, 12%, 34%);
-  --grayishBlue: hsl(229, 6%, 66%);
-  --veryLightGray: hsl(0, 0%, 98%);
-  --weight1: 200;
-  --weight2: 400;
-  --weight3: 600;
+  --neutral-100: #ffffff;
+  --neutral-200: #e5e5e5;
+  --neutral-300: #989898;
+  --neutral-400: #1e1e1e;
+  --primary-100: #e6efef;
+  --primary-200: #045b62;
+
+  --error-color: #ee3f3f;
+  --error-color-bg: #ffd5d5;
+  --warning-color: #e1b113;
+  --warning-color-bg: #fdeec8;
+  --success-color: #20941e;
+
+  --primary-svg-color: invert(27%) sepia(14%) saturate(4515%) hue-rotate(146deg)
+    brightness(92%) contrast(97%);
+}
+
+* {
+  font-family: "Nunito", sans-serif !important;
 }
 
 html {
@@ -30,9 +39,9 @@ body {
 }
 body {
   margin: 0;
-  font-family: "Questrial", sans-serif;
+  font-family: "Nunito", sans-serif;
   /* font-family: Roboto, "Helvetica Neue", sans-serif; */
-  background: url("assets/svg/pattern/path1.svg");
+  /* background: url("assets/svg/pattern/path1.svg"); */
   background-attachment: fixed;
   background-position: center center;
   background-size: cover;
@@ -40,6 +49,116 @@ body {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.left-17 {
+  left: 17% !important;
+}
+
+.h-inherit {
+  height: inherit !important;
+}
+
+.title-card {
+  /* Menu Satuan */
+  /* width: 839px;
+  height: 33px; */
+  /* font-family: "Nunito Sans" !important; */
+  font-style: normal !important;
+  font-weight: 800 !important;
+  font-size: 24px !important;
+  line-height: 33px !important;
+  /* identical to box height */
+  /* Neutral / 400 */
+  color: #1e1e1e;
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.text-main {
+  color: var(--neutral-400);
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.text-title-general {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 33px;
+  /* identical to box height */
+  /* Neutral / 400 */
+  color: var(--neutral-400);
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.text-subtitle-general {
+  font-size: 13px;
+  line-height: 25px;
+  color: var(--neutral-400);
+}
+
+.text-nano-title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: var(--neutral-400);
+}
+
+.subtitle-card {
+  /* Berikut merupakan daftar menu satuan */
+  /* width: 839px;
+  height: 22px; */
+  /* Body 1 / Reguler */
+  /* font-family: "Nunito Sans"; */
+  font-style: normal;
+  font-weight: 400;
+  /* font-size: 16px;
+  line-height: 22px; */
+  /* identical to box height */
+  /* Neutral/300 */
+  color: #989898;
+  /* Inside auto layout */
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.menu-box {
+  /* Content Menu */
+  padding: 10px !important;
+  width: auto !important;
+  color: var(--neutral-400);
+  /* Auto layout */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  gap: 8px;
+  width: 80px;
+  height: auto;
+  /* Neutral/100 */
+  background: var(--neutral-100);
+  border-radius: 8px;
+  /* Inside auto layout */
+  flex: none;
+  order: 2;
+  align-self: stretch;
+  flex-grow: 0;
 }
 
 .image-container {
@@ -69,6 +188,56 @@ body {
   min-height: 200px !important;
 }
 
+.droprown-position {
+  min-width: 200px !important;
+  margin: 30px 0px;
+  position: absolute;
+  top: 0;
+  left: -40px;
+}
+
+.position-inbottom {
+  padding-top: 0px;
+}
+
+.droprown-position-primary {
+  min-width: 205px !important;
+  margin: 30px 0px;
+  position: absolute;
+  top: 0;
+  left: 0px;
+}
+
+.position-inbottom-primary {
+  padding-top: 0px;
+}
+
+.box-dropdown-auto {
+  width: 100% !important;
+}
+
+.box-dropdown {
+  /* Category */
+  box-sizing: border-box;
+  /* Auto layout */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 16px;
+  gap: 8px;
+  width: 209px;
+  height: 40px;
+  /* Neutral/100 */
+  background: var(--neutral-100);
+  border: 1px solid var(--neutral-200);
+  border-radius: 8px;
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
 /* BUTTON */
 
 .btn-submit {
@@ -94,6 +263,20 @@ body {
   margin-right: 10px !important;
 }
 
+/* MAT SELECT */
+
+.mat-select {
+  /* height: 70%; */
+  align-items: center;
+  /* padding: 10px !important; */
+  width: 100%;
+  /* padding: 0px; */
+  background-color: white;
+  /* box-shadow: 0px 4px 20px rgb(0 0 0 / 5%); */
+  border-radius: 4px;
+  /* margin: 8px 0px 0px 0px; */
+}
+
 /* ---------------- */
 
 /* MAT ICON */
@@ -101,10 +284,6 @@ body {
   margin-left: 10px;
 }
 /* MAT ICON */
-
-* {
-  font-family: "Questrial", sans-serif;
-}
 
 .mat-progress-spinner {
   margin-left: 10px !important;
@@ -230,23 +409,34 @@ body {
 }
 
 .mat-drawer {
-  width: 10%;
+  text-align: center;
+  box-sizing: border-box !important;
+  display: flex !important;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 16px;
+  gap: 396px;
+  position: absolute !important;
+  width: 112px;
+  height: auto;
+  left: 0px;
+  top: 0px !important;
+  background: var(--neutral-100) !important;
+  border-right: 1px solid #e5e5e5;
+  box-shadow: 0px 0px 18px rgb(166 166 166 / 16%);
 }
 
 .logo-small {
   width: 100%;
-  padding: 20px;
+  padding: 10px;
 }
 
 .search-input {
   padding: 0px;
   background-color: white;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
-  border-radius: 4px;
-}
-
-.h-inherit {
-  height: inherit;
+  box-sizing: border-box;
+  border: 1px solid #e5e5e5;
+  border-radius: 8px !important;
 }
 
 .overflow-auto {
@@ -259,6 +449,26 @@ body {
   top: 0;
   width: 100%;
   z-index: 100;
+}
+
+.sticky-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.active-route {
+  background-color: var(--primary-100);
+  border-radius: 6px;
+  color: var(--primary-200);
+}
+
+.active-route-svg {
+  filter: var(--primary-svg-color) !important;
+}
+
+a {
+  text-decoration: none !important;
 }
 
 .backdrop-numpad {
@@ -303,4 +513,42 @@ body {
   max-width: 100vw;
   height: 80vh;
   min-width: 600px;
+}
+
+.card-primary {
+  height: auto;
+  box-sizing: border-box;
+  padding: 18px;
+  background: #ffffff;
+  border: 1px solid #e5e5e5;
+  box-shadow: 0px 0px 18px rgb(166 166 166 / 16%);
+  border-radius: 12px;
+}
+
+.box-panel-success {
+  width: fit-content;
+  background: #e6efef;
+  border-radius: 8px;
+  padding: 4px 10px;
+  color: #045b62;
+}
+
+.box-panel-uknown {
+  width: fit-content;
+  background: transparent;
+  border-radius: 8px;
+  padding: 4px 10px;
+  color: var(--neutral-400);
+}
+
+.mr-10px {
+  margin-right: 10px;
+}
+
+.mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+  background-color: var(--primary-200);
+}
+
+.mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+  background-color: rgb(4 91 98 / 35%);
 }
