--- a/src/app/main/pages/cashier/cashier.component.html
+++ b/src/app/main/pages/cashier/cashier.component.html
@@ -62,20 +62,45 @@
             </div>
 
             <!-- CHECKOUT SECTION -->
-            <div class="col-4 p-0">
+            <div class="col-4 p-0 checkout-container">
                 <!-- LIST ITEM -->
                 <div [ngClass]="tempRepo.isMergeBill? 'detail-list-checkout-in-merge' : 'detail-list-checkout'"
-                    class="">
-                    <ul class="list-group list-group-flush sticky">
+                    class="header-box" [class.header-box-half]="tempRepo.isMergeBill">
+
+                    <div class="c-header-info sticky-info">
+                        <p class="mb-0 head-text-primary">Item Menu Pesanan</p>
+                        <div class="col d-flex">
+                            <mat-icon class="icon-temp" svgIcon="bell"></mat-icon>
+                            <p class="text-temp mb-0">ID Order :
+                                <span class="fw-bold">
+                                    #{{ tempRepo.tempSalesActive?.id }}
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- <ul class="list-group list-group-flush sticky">
                         <li class="list-group-item d-flex align-items-center">ID Order #{{ tempRepo.tempSalesActive?.id
                             }} <button (click)="tempRepo.updateTempSales()" *ngIf="tempRepo.tempSalesActive?.id"
                                 mat-button class="col mx-2 btn-confirm">Ubah</button>
                         </li>
-                    </ul>
+                    </ul> -->
                     <ng-container *ngIf="tempRepo.tempSalesActive?.items !== null; else emptyCart">
-                        <div class="item-temp p-1 bg-white" *ngFor="let item of tempRepo.tempSalesActive?.items">
+                        <div class="item-temp p-1 bg-white" *ngFor="let ct of tempRepo.tempSalesActive?.items">
 
-                            <mat-card class="items-card">
+                            <div class="card-menu">
+                                <div class="col-3">
+                                    <img uiImageLoader class="img-product" onErrorSrc="assets/images/no_pic_square.png"
+                                        loader="assets/images/no_pic_square.png" [src]="ct.pic" [alt]="ct.name">
+                                </div>
+                                <div class="col display-grid pl-10">
+                                    <p [ngClass]="ct.isPackage ? 'price-category-package' : ''"
+                                        class="price-category mb-0">{{ ct.priceCat }}</p>
+                                    <p class="product-name text-start">{{ ct.name }}</p>
+                                    <p class="product-price mb-0 mx-10 text-start">{{ ct.totalPrice | rupiah }}
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- <mat-card class="items-card">
                                 <mat-card-title-group>
                                     <mat-card-subtitle>
                                         <p class="mb-0 fw-bold">{{ item.name }}</p>{{ item.unitPrice | rupiah }}
@@ -92,7 +117,7 @@
                                         <p> {{ item.isPackage? 'Paket' : 'Satuan' }} </p>
                                     </div>
                                 </mat-card-content>
-                            </mat-card>
+                            </mat-card> -->
 
                         </div>
                     </ng-container>
@@ -103,22 +128,50 @@
                 <!-- LIST ITEM -->
 
                 <!-- IF LIST MERGE BILL ACTIVE -->
-                <div *ngIf="tempRepo.isMergeBill" class="detail-list-merge">
-                    <div class="d-flex align-items-center search-input px-2">
-                        <input placeholder="Nama" class="col" type="text" [(ngModel)]="tempRepo.merge.name" mat-input>
+                <div *ngIf="tempRepo.isMergeBill" class="detail-list-merge body-box">
+                    <div class="sticky-cart-info">
+                        <p class="fw-bold mb-1">Info Pemesan</p>
+                    </div>
+
+                    <p class="mb-0 text-label">Nama</p>
+                    <div class="d-flex align-items-center search-input px-2 mb-2">
+                        <mat-icon class="icon-temp" svgIcon="user"></mat-icon>
+                        <input placeholder="Masukkan Nama Pemesan" class="col input-small" type="text"
+                            [(ngModel)]="tempRepo.merge.name" mat-input>
                         <mat-icon (click)="tempRepo.merge.name = ''" class="col-2 mx-3 cursor-pointer" svgIcon="remove">
                         </mat-icon>
                     </div>
-                    <div class="d-flex align-items-center search-input px-2">
-                        <input placeholder="Catatan" class="col" type="text" [(ngModel)]="tempRepo.merge.note"
-                            mat-input>
+
+                    <p class="mb-0 text-label">Catatan</p>
+                    <div class="d-flex align-items-center search-input px-2 mb-2">
+                        <mat-icon class="icon-temp" svgIcon="note"></mat-icon>
+                        <input placeholder="Masukkan Catatan" class="col input-small" type="text"
+                            [(ngModel)]="tempRepo.merge.note" mat-input>
                         <mat-icon (click)="tempRepo.merge.note = ''" class="col-2 mx-3 cursor-pointer" svgIcon="remove">
                         </mat-icon>
                     </div>
-                    <div class="container row h-inherit overflow-auto m-0 pb-5rem">
 
-                        <ng-container *ngIf="tempRepo.listBillInbound">
+                    <p class="fw-bold mb-1">Tagihan Gabungan</p>
+                    <div class="d-flex container-list-merge">
+                        <div class="parent-list-merge">
+                            <ng-container *ngIf="tempRepo.listBillInbound">
+                                <div class="w-100 d-flex onlist" *ngFor="let bill of tempRepo.listBillInbound">
+                                    <div class="col-1">1</div>
+                                    <div class="col">
+                                        <div class="col d-flex">
+                                            <mat-icon class="icon-temp" svgIcon="bell"></mat-icon>
+                                            <p class="text-temp mb-0">ID Order :
+                                                <span class="fw-bold">
+                                                    #{{ bill.id }}
+                                                </span>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="col text-A1">{{ tempRepo.getTotalPrice(bill.items) | rupiah }}</div>
+                                </div>
+                            </ng-container>
 
+                            <!-- <ng-container *ngIf="tempRepo.listBillInbound">
                             <ol class="list-group list-group-numbered p-0">
                                 <li class="list-group-item d-flex justify-content-between align-items-start"
                                     *ngFor="let bill of tempRepo.listBillInbound">
@@ -134,15 +187,16 @@
                                 </li>
                             </ol>
 
-                        </ng-container>
+                        </ng-container> -->
 
+                        </div>
                     </div>
                 </div>
                 <!-- IF LIST MERGE BILL ACTIVE-->
 
 
                 <!-- DESCRIPTION CHECKOUT -->
-                <div class="payment-list-checkout">
+                <div class="payment-list-checkout footer-box">
                     <ul class="list-group list-group-flush">
                         <li *ngIf="!tempRepo.isMergeBill" class="list-group-item d-flex justify-content-between">Jumlah
                             item #
@@ -151,9 +205,10 @@
                                 {{ tempRepo.getTotalPrice(tempRepo.tempSalesActive?.items?? []) | rupiah }}
                             </div>
                         </li>
-                        <li *ngIf="tempRepo.isMergeBill" class="list-group-item d-flex justify-content-between">Jumlah
-                            item #
-                            {{tempRepo.listBillInbound.length }}
+                        <li *ngIf="tempRepo.isMergeBill"
+                            class="list-group-item d-flex justify-content-between fw-bold px-0">
+                            Total
+                            ({{tempRepo.listBillInbound.length }})
                             <div class="col-4 fw-bold">
                                 {{ tempRepo.grand_total | rupiah}}
                             </div>
@@ -165,7 +220,7 @@
                     <ng-container *ngIf="tempRepo.isMergeBill; else isNormal">
                         <div class="d-flex">
                             <button [disabled]="tempRepo.isLoadingMerge" (click)="tempRepo.clearMerge()" mat-button
-                                color="accent" class="col-4">{{ tempRepo.isLoadingMerge? '' : 'Batal' }}</button>
+                                class="col-4 btn-ccl mr-10">{{ tempRepo.isLoadingMerge? '' : 'Batal' }}</button>
                             <button [disabled]="tempRepo.isLoadingMerge" (click)="tempRepo.submitMerge()" mat-button
                                 class="btn-pay"> {{ tempRepo.isLoadingMerge? 'Loading...' : 'Gabung Tagihan' }}</button>
                         </div>
