--- a/src/app/main/pages/cashier/component/section-list-order/list-order.component.html
+++ b/src/app/main/pages/cashier/component/section-list-order/list-order.component.html
@@ -1,21 +1,29 @@
 <mat-card class="">
-    <mat-card-title>Daftar Pesanan</mat-card-title>
-    <mat-card-subtitle class="mb-0">Berikut merupakan daftar pesanan sementara</mat-card-subtitle>
+    <h1 class="title-card mb-1">Daftar Pesanan</h1>
+    <p class="subtitle-card mb-0">Berikut merupakan daftar menu pesanan</p>
     <mat-card-content class="mb-0">
-        <div class="row align-items-center">
+        <div class="d-flex align-items-center main-filter m-5-0">
+            <div class="col-4">
+                <mat-select [(value)]="tempRepo.findTempSales.option" panelClass="droprdown-position-orderby">
+                    <mat-option [value]="item.value" *ngFor="let item of optionType">{{
+                        item.key
+                        }}</mat-option>
+                </mat-select>
+            </div>
+            <span class="devider-filter"></span>
             <ng-container *ngIf="tempRepo.findTempSales.option !== 'table'; else teableOpt">
-                <div class="col py-2">
-                    <div class="d-flex align-items-center search-input">
+                <div class="col">
+                    <div class="d-flex align-items-center find-input">
                         <mat-icon (click)="tempRepo.getTempSales()" class="col-2 mx-3 cursor-pointer" svgIcon="search">
                         </mat-icon>
-                        <input (keyup)="applyFilter($event)" placeholder="Search" class="col" type="text"
+                        <input (keyup)="applyFilter($event)" placeholder="Cari Pesanan" class="col" type="text"
                             [value]="tempRepo.findTempSales.search" mat-input />
                         <mat-icon (click)="clear()" class="col-2 mx-3 cursor-pointer" svgIcon="remove"></mat-icon>
                     </div>
                 </div>
             </ng-container>
             <ng-template #teableOpt>
-                <div class="col py-2">
+                <div class="col">
                     <mat-select [(value)]="searchTable" class="search-input"
                         (selectionChange)="selectTableFindTempSales()">
                         <mat-option [value]="null" selected>Pilih Meja</mat-option>
@@ -25,17 +33,28 @@
                     </mat-select>
                 </div>
             </ng-template>
-            <div class="col-4">
-                <mat-select [(value)]="tempRepo.findTempSales.option">
-                    <mat-option [value]="item.value" *ngFor="let item of optionType">{{
-                        item.key
-                        }}</mat-option>
-                </mat-select>
-            </div>
         </div>
     </mat-card-content>
     <mat-divider inset></mat-divider>
     <mat-card-actions class="row d-flex justify-content-between mb-0 mb-0">
+        <p class="text-desc col-2">Filter Waktu</p>
+        <div class="col-5 text-end">
+            <div class="d-flex justify-content-between">
+                <div class="box-time d-flex align-items-center">
+                    <!-- <label for="appt">Waktu Awal :</label> -->
+                    <input type="time" id="appt" name="appt" [value]="firstTime" (change)="startTime($event.target)"
+                        required />
+                </div>
+                <div class="col d-flex align-items-center justify-content-center">
+                    <mat-icon svgIcon="line"></mat-icon>
+                </div>
+                <div class="box-time d-flex align-items-center">
+                    <!-- <label for="appt">Waktu Awal :</label> -->
+                    <input type="time" id="appt" name="appt" [value]="lastTime" (change)="endTime($event.target)"
+                        required />
+                </div>
+            </div>
+        </div>
         <div class="col">
             <div class="d-flex box-range">
                 <mat-date-range-input [formGroup]="rangeDate" [rangePicker]="picker">
@@ -47,31 +66,6 @@
                 <mat-date-range-picker #picker></mat-date-range-picker>
             </div>
         </div>
-
-        <div class="col-5 text-end">
-            <!-- <button mat-button color="accent" class="button-next-prev">
-                <mat-icon>chevron_left</mat-icon>
-            </button>
-            <strong class="mx-2"> 1 </strong>
-            <button mat-button color="accent" class="button-next-prev">
-                <mat-icon>chevron_right</mat-icon>
-            </button> -->
-            <div class="d-flex justify-content-between">
-                <div class="box-time d-flex align-items-center">
-                    <!-- <label for="appt">Waktu Awal :</label> -->
-                    <input type="time" id="appt" name="appt" [value]="firstTime" (change)="startTime($event.target)"
-                        required />
-                </div>
-                <div class="col d-flex align-items-center justify-content-center">
-                    <mat-icon>remove</mat-icon>
-                </div>
-                <div class="box-time d-flex align-items-center">
-                    <!-- <label for="appt">Waktu Awal :</label> -->
-                    <input type="time" id="appt" name="appt" [value]="lastTime" (change)="endTime($event.target)"
-                        required />
-                </div>
-            </div>
-        </div>
     </mat-card-actions>
     <mat-card-footer>
         <mat-progress-bar *ngIf="tempRepo.isLoading" mode="indeterminate"></mat-progress-bar>
@@ -79,59 +73,19 @@
 </mat-card>
 <div class="container-fluid h-auto list-order-container px-3">
     <div class="row px-2 py-2">
-        <div class="list-group p-0">
+        <div class="list-group-order p-0">
             <!-- LIST DATA AREA IF NOT LOADING -->
             <ng-container *ngIf="!tempRepo.isLoading; else isNotLoad">
                 <!-- CARD LIST -->
                 <ng-container *ngIf="tempRepo.tempSales.length > 0; else listEmpty">
-                    <a [class.is-active]="getActive(temp.id)" class="list-group-item list-group-item-action mb-1"
-                        aria-current="true" *ngFor="let temp of tempRepo.tempSales; let i = index">
-                        <mat-checkbox *ngIf="tempRepo.isMergeBill" [checked]="tempRepo.isExistMerge(temp.id)"
-                            class="example-margin" (change)="tempRepo.checkList = temp.id">{{
-                            tempRepo.isExistMerge(temp.id)
-                            ? "Dalam Daftar gabung tagihan" : "Klik disini jika ingin masuk kedaftar tagihan"}}
-                        </mat-checkbox>
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1 d-flex align-items-center">
-                                {{ temp.name == "" ? "" : temp.name }}
-                                <span *ngIf="temp.tableIds.length > 0" style="padding-left: 10px">T.</span>
-                                {{
-                                temp.tableIds.length > 0
-                                ? getTable(temp.tableIds[0])
-                                : "Take Away"
-                                }}
-                            </h5>
-                            <!-- <p>{{ temp.items | json }}</p> -->
-                            <div class="d-flex">
-                                <small class="d-flex align-items-center">{{
-                                    temp.createdAt | milistodate: "full"
-                                    }}</small>
-                                <button *ngIf="!tempRepo.isMergeBill" mat-button [matMenuTriggerFor]="menu">
-                                    <mat-icon>more_vert</mat-icon>
-                                </button>
-                            </div>
-                            <!-- {{ temp.items| json }} -->
-                            <mat-menu #menu="matMenu" [overlapTrigger]="false" yPosition="below" xPosition="before">
-                                <!-- <button mat-menu-item (click)="updateBill(temp)">Perbaharui</button> -->
-                                <button mat-menu-item (click)="tempRepo.setMergeBill(temp.id, temp.waiter)">
-                                    Gabung Tagihan
-                                </button>
-                                <button (click)="goToSplitPage(temp.id)" mat-menu-item>Pisah Tagihan</button>
-                                <button (click)="tempRepo.confirmationCancelDialog(temp.id)" mat-menu-item>Batalkan
-                                </button>
-                            </mat-menu>
-                        </div>
-                        <p class="mb-0">
-                            Order ID <strong>#{{ temp.id }}</strong>
-                        </p>
-                        <p>{{ temp.note }}</p>
-                        <!-- <small>Jumlah item {{ temp.items.length }}</small> -->
-                        <div class="d-flex justify-content-between">
-                            <small class="d-flex align-items-center">Jumlah item {{ temp.items.length }}</small>
-                            <button (click)="tempRepo.seeDetail(i)" mat-button>
-                                Lihat
-                            </button>
-                        </div>
+                    <a [class.is-active]="getActive(temp.id)" class="box-card" aria-current="true"
+                        *ngFor="let temp of tempRepo.tempSales; let i = index">
+                        <order-card class="w-100" [temp]="temp" [idx]="i" [onselect]="getActive(temp.id)"
+                            [isMerge]="tempRepo.isMergeBill" [isChecked]="tempRepo.isExistMerge(temp.id)"
+                            (on_input_id_merge)="inmerge($event)" (on_active)="tempRepo.seeDetail(i)"
+                            (on_merge)="merge($event)" (on_split)="goToSplitPage($event)"
+                            (on_delete)="tempRepo.confirmationCancelDialog($event)">
+                        </order-card>
                     </a>
                 </ng-container>
                 <!-- CARD LIST -->
