--- a/src/app/shared/component/product-card/product-card.component.css
+++ b/src/app/shared/component/product-card/product-card.component.css
@@ -1,14 +1,10 @@
 .card-product {
-  width: 156px;
+  width: 135px;
   cursor: pointer;
-  /* width: 192.67px; */
-  /* height: 250px; */
   min-height: 190px;
-  border-radius: 10px;
   background: #ffffff;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.02);
-  margin-right: 10px;
-  margin-bottom: 10px;
+  box-shadow: 0px 0px 18px rgba(166, 166, 166, 0.16);
+  border-radius: 16px;
 }
 
 .disable-product {
@@ -22,6 +18,91 @@
 }
 
 .img-product {
-  width: 70%;
-  border-radius: 10px;
+  width: 90%;
+  border-radius: 8px;
+  height: 110px;
+}
+
+.price-category {
+  width: max-content;
+  background: var(--primary-100);
+  border-radius: 4px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 4px 8px;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 16px;
+  text-align: center;
+  color: var(--primary-200);
+}
+
+.mx-10 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.product-name {
+  color: var(--netral-400);
+  font-size: 0.8rem;
+  font-weight: 700;
+  line-height: 1.5;
+  max-width: 100%;
+  max-height: 100%;
+  white-space: pre-wrap;
+  word-break: keep-all;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  margin-bottom: 4px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.product-price {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 19px;
+  /* identical to box height */
+  /* Neutral / 400 */
+  color: var(--primary-200);
+}
+
+.f-11px {
+  font-size: 11px;
+}
+
+.unit-price {
+  color: var(--neutral-300);
+  letter-spacing: 1px;
+}
+
+.mr-2px {
+  margin-right: 2px;
+}
+
+.relative {
+  position: relative;
+}
+
+.box-badge {
+  position: absolute;
+  width: 33px;
+  height: 33px;
+  right: 6px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  background: var(--primary-200);
+  opacity: 0.8;
+  border-radius: 0px 8px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 19px;
+  color: #ffffff;
 }
